# justnotetaking

./: .gitignore  .npmrc  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-api.yml  deploy-marketing.yml  deploy-web.yml  release.yml
apps/api/: .dev.vars.example  drizzle.config.ts  package.json  tsconfig.json  wrangler.jsonc
apps/api/drizzle/: 0000_plain_energizer.sql  0001_calm_moondragon.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/api/migrations/: 0002_notes_fts.sql  0003_nebulous_salo.sql  0004_note_mode_pos.sql
apps/api/src/: auth.ts  env.ts  index.ts
apps/api/src/db/: client.ts  schema.ts
apps/api/src/routes/: notes.ts  settings.ts
apps/marketing/: astro.config.mjs  package.json  tailwind.config.cjs
apps/marketing/src/pages/: index.astro
apps/marketing/src/pages/auth/: callback.astro
apps/marketing/src/styles/: global.css
apps/web/: index.html  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: AuthBootstrap.tsx  AuthPanel.tsx  JustNotesLoader.tsx  UpdateBanner.tsx
apps/web/src/components/JustNotes/: JustNotes.tsx  cherries.tsx  clipboard.ts  lib.ts  markdown.tsx  tweaks.tsx
apps/web/src/hooks/: useNotes.ts  useSettings.ts  useUpdater.ts
apps/web/src/lib/: api-client.ts  auth-client.ts  clipboard-origin.ts  local-notes.ts  runtime.ts  seed-ids.ts  storage.ts  tauri-deep-link.ts  tauri-oauth.ts  updater.ts
apps/web/src/styles/: global.css
brand/: README.md  build.py
docs/: deploy.md  migration.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
