[package]
name = "justnotes"
version = "0.1.0"
description = "JustNotes desktop"
authors = ["KreativeKorna"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "justnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# Auto-update. Endpoint + pubkey live in tauri.conf.json; the user supplies
# both when they have a signing key + a signed latest.json feed.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Open URLs in the system browser (used to kick off OAuth) + receive
# justnotes:// deep links back from the post-OAuth server callback.
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"

# Bearer-token storage in the OS keychain. Used to persist the Better Auth
# session token across Tauri launches without a cookie store.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
# On Win/Linux the deep-link plugin needs the single-instance plugin so a
# second launch (triggered by the OS handing us a justnotes:// URL while
# the first instance is already running) forwards the URL into the running
# process instead of spawning a duplicate.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
