[package]
name = "justnotetaking"
version = "0.1.3"
description = "JustNoteTaking desktop"
authors = ["KreativeKorna"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "justnotetaking_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# Auto-update. Endpoint + pubkey live in tauri.conf.json; the user supplies
# both when they have a signing key + a signed latest.json feed.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Open URLs in the system browser (used to kick off OAuth).
tauri-plugin-opener = "2"
# Localhost listener for the OAuth bounce-back. Spins up an ephemeral
# HTTP server, returns the port to JS; when the OAuth callback redirects
# to http://localhost:<port>/…?token=… the plugin emits an event with
# the full URL. Works in dev without bundle install, unlike custom URL
# schemes which require the .app to be registered with LaunchServices.
tauri-plugin-oauth = "2"

# Bearer-token storage in the OS keychain. Used to persist the Better Auth
# session token across Tauri launches without a cookie store.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
